--- a/server/build.gradle
+++ b/server/build.gradle
@@ -242,6 +242,7 @@ dependencies {
   copyOnly project(path: ':agent-launcher', configuration: 'fatJarConfig')
   copyOnlyTestData project(':test:test-agent')
 
+  compile group: 'org.json', name: 'json', version: '20180813'
   compile group: 'org.apache.commons', name: 'commons-dbcp2', version: project.versions.commonsDbcp
   compile group: 'com.h2database', name: 'h2', version: project.versions.h2db
   compile group: 'net.sf', name: 'dbdeploy', version: '2.11.1'
