--- a/manual-testing/ant_hg/password.properties
+++ b/manual-testing/ant_hg/password.properties
@@ -24,4 +24,4 @@ view=ThmbShxAtJepX80c2JY1FzOEmUk=
 operate=ThmbShxAtJepX80c2JY1FzOEmUk=
 both=ThmbShxAtJepX80c2JY1FzOEmUk=
 admin=ThmbShxAtJepX80c2JY1FzOEmUk=
-admin=ThmbShxAtJepX80c2JY1FzOEmUk=
+dev:{SHA}NMb87KdeRW8l5+mVMeJCXGwd5EM=
